exports[`Chat should render with default props 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="undefined">
    <div
        className={undefined}>
        
    </div>
</div>,
  "nodes": Array [
    <div
      className="undefined">
      <div
            className={undefined}>
            
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 1,
      "_context": Object {},
      "_currentElement": <Chat
        messages={Array []} />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Chat {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "messages": Array [],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="undefined">
          <div
                    className={undefined}>
                    
          </div>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="undefined">
          <div
                    className={undefined}>
                    
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Chat
    messages={Array []} />,
}
`;

exports[`ChatMessage should render with default props 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className={undefined}>
    <div
        className={undefined}>
        <img
            alt=""
            className={undefined}
            src={undefined} />
        <SocialIconLive
            provider={undefined}
            styleOverrides={
                Object {
                    "bottom": 0,
                    "position": "absolute",
                    "right": 10,
                  }
            } />
    </div>
    <div
        className={undefined}>
        <div
            className={undefined}>
            <span
                className={undefined} />
            <span
                className={undefined}>
                8:06PM
            </span>
        </div>
        <div
            className={undefined}>
            A default message
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className={undefined}>
      <div
            className={undefined}>
            <img
                  alt=""
                  className={undefined}
                  src={undefined} />
            <SocialIconLive
                  provider={undefined}
                  styleOverrides={
                        Object {
                              "bottom": 0,
                              "position": "absolute",
                              "right": 10,
                            }
                  } />
      </div>
      <div
            className={undefined}>
            <div
                  className={undefined}>
                  <span
                        className={undefined} />
                  <span
                        className={undefined}>
                        8:06PM
                  </span>
            </div>
            <div
                  className={undefined}>
                  A default message
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Unknown
        author="Unknown Jones"
        createdAt="2017-09-01T03:06:29.980Z"
        message="A default message" />,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "author": "Unknown Jones",
          "createdAt": "2017-09-01T03:06:29.980Z",
          "message": "A default message",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className={undefined}>
          <div
                    className={undefined}>
                    <img
                              alt=""
                              className={undefined}
                              src={undefined} />
                    <SocialIconLive
                              provider={undefined}
                              styleOverrides={
                                        Object {
                                                  "bottom": 0,
                                                  "position": "absolute",
                                                  "right": 10,
                                                }
                              } />
          </div>
          <div
                    className={undefined}>
                    <div
                              className={undefined}>
                              <span
                                        className={undefined} />
                              <span
                                        className={undefined}>
                                        8:06PM
                              </span>
                    </div>
                    <div
                              className={undefined}>
                              A default message
                    </div>
          </div>
</div>,
        "_debugID": 6,
        "_renderedOutput": <div
          className={undefined}>
          <div
                    className={undefined}>
                    <img
                              alt=""
                              className={undefined}
                              src={undefined} />
                    <SocialIconLive
                              provider={undefined}
                              styleOverrides={
                                        Object {
                                                  "bottom": 0,
                                                  "position": "absolute",
                                                  "right": 10,
                                                }
                              } />
          </div>
          <div
                    className={undefined}>
                    <div
                              className={undefined}>
                              <span
                                        className={undefined} />
                              <span
                                        className={undefined}>
                                        8:06PM
                              </span>
                    </div>
                    <div
                              className={undefined}>
                              A default message
                    </div>
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Unknown
    author="Unknown Jones"
    createdAt="2017-09-01T03:06:29.980Z"
    message="A default message" />,
}
`;
